# libqpsd

./: CMakeLists.txt  qpsdhandler.cpp  qpsdplugin.cpp
.github/workflows/: build.yaml
